==============================
Changes for Crate-Java-Testing
==============================

Unreleased
==========

2016/10/19 0.4.3
================

 * exposed PostgreSQL port in the Crate test server.

2016/06/16 0.4.2
================

 * make methods `start` cluster, `prepareEnvironment`, `before`
   and `after` of CrateTestCluster public.

2016/03/14 0.4.1
================

 * testing framework use an unique directory for each test cluster.

2016/02/19 0.4.0
================

 * BREAKING CHANGE: remove shaded crate client from crate testing server
   and cluster.

 * remove deprecated static ``build`` method from crate test server.

 * make crate instance directory configurable for removal after
   test servers are stopped.

2016/02/12 0.3.1
================

 * add ``fromSysProperties`` static factory method to CrateTestCluster.

2016/02/08 0.3.0
================

 * remove execute logic from crate server and cluster

 * removed CrateTestServer public constructors

 * fix: correct wiping of data and logs directories

2015/12/16 0.2.0
================

 * download crate distributions from the same source
   to their own downloadfolder

 * deprecated ``.builder()`` methods on CrateTestServer and CrateTestCluster.
   use ``fromURL``, ``fromVersion`` or ``fromFile`` instead.

2015/12/09 0.1.1
================

 * use java 7 source and target compatibility

2015/12/06 0.1.0
================

 * use new servers for every cluster (re-)start

 * add executeAsync methods

 * fix ShadingClassLoader usage for internal CrateClient

 * fix reusing a static cluster instance

2015/11/27 0.0.5
================

 * add a shading classloader that handles loading shaded classes

 * fix usage of transportclient for ensureGreen and ensureYellow

2015/11/27 0.0.4
================

 * fix waiting for CrateTestCluster to become ready

2015/11/26 0.0.3
================

 * overhauled CrateTestServer creation and added CrateTestCluster

2015/11/17 0.0.2
================
