@@ -5,6 +5,9 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * crate versions which does not support -Des any longer
+   can be used in the crate java testing layer.
+
 2016/10/19 0.4.3
 ================
 
